[gd_scene load_steps=3 format=3 uid="uid://db5mkgp7blp6t"]

[ext_resource type="Script" uid="uid://2s6gjalcb4n4" path="res://Ui/Screens/pre_round_menu.gd" id="1_o8eaa"]
[ext_resource type="Texture2D" uid="uid://dwfnm2hsocyow" path="res://Characters/Creature/Textures/Dwarf.png" id="2_do44h"]

[node name="PreRoundMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8eaa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterTexture" type="TextureRect" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -62.0
offset_right = 71.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_do44h")

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -33.0
offset_right = 39.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Start"

[node name="AcceptableItemLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "Accepted Items"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/AcceptableItemLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="RequiredLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 49.0
offset_right = 90.0
offset_bottom = 72.0
text = "Required"

[node name="RequiredAmountLabel" type="Label" parent="CanvasLayer/Control/RequiredLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 12.5
offset_right = 20.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorToleranceLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 199.0
offset_top = 46.0
offset_right = 319.0
offset_bottom = 69.0
text = "Error Tolerance"

[node name="ErrorToleranceAmountLabel" type="Label" parent="CanvasLayer/Control/ErrorToleranceLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 15.5
offset_right = 20.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
